// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component Common Category Snapshot tests Add icon with default props 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Common Category Snapshot tests Add icon with large size 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "black",
      "height": 48,
      "width": 48,
    }
  }
/>
`;

exports[`Icon component Common Category Snapshot tests Add icon with medium size 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Common Category Snapshot tests Add icon with primary color 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "blue",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Common Category Snapshot tests Add icon with secondary color 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "red",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Common Category Snapshot tests Add icon with small size 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "black",
      "height": 24,
      "width": 24,
    }
  }
/>
`;

exports[`Icon component Common Category Snapshot tests Add icon with tertiary color 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"M12 4.5v15m7.5-7.5h-15\\" />
</svg>
",
    }
  }
  id="icon-common-add"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with filled variant 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path d=\\"M11.47 3.841a.75.75 0 0 1 1.06 0l8.69 8.69a.75.75 0 1 0 1.06-1.061l-8.689-8.69a2.25 2.25 0 0 0-3.182 0l-8.69 8.69a.75.75 0 1 0 1.061 1.06l8.69-8.689Z\\" />
  <path d=\\"m12 5.432 8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 0 1-.75-.75v-4.5a.75.75 0 0 0-.75-.75h-3a.75.75 0 0 0-.75.75V21a.75.75 0 0 1-.75.75H5.625a1.875 1.875 0 0 1-1.875-1.875v-6.198a2.29 2.29 0 0 0 .091-.086L12 5.432Z\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with large size 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 48,
      "width": 48,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with medium size 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with outline variant 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with primary color 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "blue",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with secondary color 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "red",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with small size 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 24,
      "width": 24,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test Home icon with tertiary color 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;

exports[`Icon component Generic Category snapshot test icon component with generic category home with default props 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" strokeWidth={1.5} stroke=\\"currentColor\\" className=\\"w-6 h-6\\">
  <path strokeLinecap=\\"round\\" strokeLinejoin=\\"round\\" d=\\"m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25\\" />
</svg>
",
    }
  }
  id="icon-generic-home"
  style={
    Object {
      "color": "black",
      "height": 32,
      "width": 32,
    }
  }
/>
`;
